package gfbot.decoder.characters

object CharactersProto extends _root_.scalapb.GeneratedFileObject {
  lazy val dependencies: Seq[_root_.scalapb.GeneratedFileObject] = Seq(
    gfbot.decoder.language_string_data.LanguageStringDataProto
  )
  lazy val messagesCompanions: Seq[_root_.scalapb.GeneratedMessageCompanion[_ <: _root_.scalapb.GeneratedMessage]] =
    Seq[_root_.scalapb.GeneratedMessageCompanion[_ <: _root_.scalapb.GeneratedMessage]](
      GunDataTable,
      GunData
    )
  private lazy val ProtoBytes: _root_.scala.Array[Byte] =
    scalapb.Encoding.fromBase64(scala.collection.immutable.Seq(
      """ChBjaGFyYWN0ZXJzLnByb3RvGhpsYW5ndWFnZV9zdHJpbmdfZGF0YS5wcm90byI3CgxHdW5EYXRhVGFibGUSJwoEZGF0YRgBI
  AMoCzIILkd1bkRhdGFCCeI/BhIEZGF0YVIEZGF0YSLKHQoHR3VuRGF0YRIXCgJpZBgBIAEoDUIH4j8EEgJpZFICaWQSMgoEbmFtZ
  RgCIAEoCzITLkxhbmd1YWdlU3RyaW5nRGF0YUIJ4j8GEgRuYW1lUgRuYW1lEkEKCWZpcnN0TmFtZRgDIAEoCzITLkxhbmd1YWdlU
  3RyaW5nRGF0YUIO4j8LEglmaXJzdE5hbWVSCWZpcnN0TmFtZRJECgpzZWNvbmROYW1lGAQgASgLMhMuTGFuZ3VhZ2VTdHJpbmdEY
  XRhQg/iPwwSCnNlY29uZE5hbWVSCnNlY29uZE5hbWUSOAoGZW5OYW1lGAUgASgLMhMuTGFuZ3VhZ2VTdHJpbmdEYXRhQgviPwgSB
  mVuTmFtZVIGZW5OYW1lEkEKCWludHJvZHVjZRgGIAEoCzITLkxhbmd1YWdlU3RyaW5nRGF0YUIO4j8LEglpbnRyb2R1Y2VSCWlud
  HJvZHVjZRI+CghkaWFsb2d1ZRgHIAEoCzITLkxhbmd1YWdlU3RyaW5nRGF0YUIN4j8KEghkaWFsb2d1ZVIIZGlhbG9ndWUSNQoFZ
  Xh0cmEYCCABKAsyEy5MYW5ndWFnZVN0cmluZ0RhdGFCCuI/BxIFZXh0cmFSBWV4dHJhEh0KBGNvZGUYCSABKAlCCeI/BhIEY29kZ
  VIEY29kZRIdCgR0eXBlGAogASgFQgniPwYSBHR5cGVSBHR5cGUSMgoLY2hhcmFjdGVySWQYCyABKA1CEOI/DRILY2hhcmFjdGVyS
  WRSC2NoYXJhY3RlcklkEikKCGdldEF1ZGlvGAwgASgNQg3iPwoSCGdldEF1ZGlvUghnZXRBdWRpbxIdCgRkdXR5GA0gASgFQgniP
  wYSBGR1dHlSBGR1dHkSLwoKc2Vjb25kRHV0eRgOIAEoDUIP4j8MEgpzZWNvbmREdXR5UgpzZWNvbmREdXR5Eh0KBHJhbmsYDyABK
  AVCCeI/BhIEcmFua1IEcmFuaxI7Cg5yb2xlVGVtcGxhdGVJZBgQIAEoDUIT4j8QEg5yb2xlVGVtcGxhdGVJZFIOcm9sZVRlbXBsY
  XRlSWQSLwoKY29yZUl0ZW1JZBgRIAEoDUIP4j8MEgpjb3JlSXRlbUlkUgpjb3JlSXRlbUlkEk0KDXVwZ3JhZGVTcGVlY2gYEiABK
  AsyEy5MYW5ndWFnZVN0cmluZ0RhdGFCEuI/DxINdXBncmFkZVNwZWVjaFINdXBncmFkZVNwZWVjaBJEChFza2lsbE5vcm1hbEF0d
  GFjaxgTIAEoDUIW4j8TEhFza2lsbE5vcm1hbEF0dGFja1IRc2tpbGxOb3JtYWxBdHRhY2sSQQoQc2tpbGxBY3RpdmVFeHRyYRgUI
  AMoDUIV4j8SEhBza2lsbEFjdGl2ZUV4dHJhUhBza2lsbEFjdGl2ZUV4dHJhEkEKEHNraWxsVGFsZW50RXh0cmEYFSADKA1CFeI/E
  hIQc2tpbGxUYWxlbnRFeHRyYVIQc2tpbGxUYWxlbnRFeHRyYRIjCgZhaUxpc3QYFiADKAVCC+I/CBIGYWlMaXN0UgZhaUxpc3QSJ
  goHZWxlbWVudBgXIAEoDUIM4j8JEgdlbGVtZW50UgdlbGVtZW50Ei8KCndlYXBvblR5cGUYGCABKA1CD+I/DBIKd2VhcG9uVHlwZ
  VIKd2VhcG9uVHlwZRI4Cg13ZWFwb25Qcml2YXRlGBkgAygNQhLiPw8SDXdlYXBvblByaXZhdGVSDXdlYXBvblByaXZhdGUSRAoRd
  2VhcG9uUHJpdmF0ZVNob3cYGiADKA1CFuI/ExIRd2VhcG9uUHJpdmF0ZVNob3dSEXdlYXBvblByaXZhdGVTaG93EjgKDXdlYXBvb
  kRlZmF1bHQYGyABKA1CEuI/DxINd2VhcG9uRGVmYXVsdFINd2VhcG9uRGVmYXVsdBIpCghtb3ZlQ29kZRgcIAEoDUIN4j8KEghtb
  3ZlQ29kZVIIbW92ZUNvZGUSQQoIc29sZEdldDEYHSADKAsyFi5HdW5EYXRhLlNvbGRHZXQxRW50cnlCDeI/ChIIc29sZEdldDFSC
  HNvbGRHZXQxEjUKDHN5c3RlbVN3aXRjaBgeIAEoDUIR4j8OEgxzeXN0ZW1Td2l0Y2hSDHN5c3RlbVN3aXRjaBI4Cg11c2VGYWtlQ
  XR0YWNrGB8gASgIQhLiPw8SDXVzZUZha2VBdHRhY2tSDXVzZUZha2VBdHRhY2sSHQoEY2FtcBggIAEoDUIJ4j8GEgRjYW1wUgRjY
  W1wEjUKDGRlZmF1bHRHcmFkZRghIAEoDUIR4j8OEgxkZWZhdWx0R3JhZGVSDGRlZmF1bHRHcmFkZRIvCgp1bmxvY2tDb3N0GCIgA
  SgNQg/iPwwSCnVubG9ja0Nvc3RSCnVubG9ja0Nvc3QSIAoFZ3JhZGUYIyABKA1CCuI/BxIFZ3JhZGVSBWdyYWRlEikKCGd1bkNsY
  XNzGCQgASgNQg3iPwoSCGd1bkNsYXNzUghndW5DbGFzcxJNChRiYXJyYWNrQ2FtZXJhU2V0dGluZxglIAEoCUIZ4j8WEhRiYXJyY
  WNrQ2FtZXJhU2V0dGluZ1IUYmFycmFja0NhbWVyYVNldHRpbmcSIwoGYXZhdGFyGCYgASgNQgviPwgSBmF2YXRhclIGYXZhdGFyE
  iwKCWNvc3R1bWVJZBgnIAEoDUIO4j8LEgljb3N0dW1lSWRSCWNvc3R1bWVJZBI7Cg5jb3N0dW1lUmVwbGFjZRgoIAMoDUIT4j8QE
  g5jb3N0dW1lUmVwbGFjZVIOY29zdHVtZVJlcGxhY2USLwoKcHJvcGVydHlJZBgpIAEoDUIP4j8MEgpwcm9wZXJ0eUlkUgpwcm9wZ
  XJ0eUlkEj4KD2JhcnJhY2tFZmZlY3RJZBgqIAMoDUIU4j8REg9iYXJyYWNrRWZmZWN0SWRSD2JhcnJhY2tFZmZlY3RJZBIjCgZ3Z
  WlnaHQYKyABKA1CC+I/CBIGd2VpZ2h0UgZ3ZWlnaHQSOwoOYmFycmFja0F1ZGlvSWQYLCABKA1CE+I/EBIOYmFycmFja0F1ZGlvS
  WRSDmJhcnJhY2tBdWRpb0lkEi8KCnNoaWVsZFR5cGUYLSABKA1CD+I/DBIKc2hpZWxkVHlwZVIKc2hpZWxkVHlwZRIpCghtYXhHc
  mFkZRguIAEoDUIN4j8KEghtYXhHcmFkZVIIbWF4R3JhZGUSOwoOc2hpZWxkRWZmZWN0SWQYLyABKA1CE+I/EBIOc2hpZWxkRWZmZ
  WN0SWRSDnNoaWVsZEVmZmVjdElkEi8KCmJhc2VTdXBwbHkYMCABKA1CD+I/DBIKYmFzZVN1cHBseVIKYmFzZVN1cHBseRJEChFzd
  XBwbHlUeXBlQmFuTGlzdBgxIAMoDUIW4j8TEhFzdXBwbHlUeXBlQmFuTGlzdFIRc3VwcGx5VHlwZUJhbkxpc3QSLwoKZXh0cmFTa
  2lsbBgyIAEoDUIP4j8MEgpleHRyYVNraWxsUgpleHRyYVNraWxsEk0KFHNoaWVsZEJyb2tlbkVmZmVjdElkGDMgASgNQhniPxYSF
  HNoaWVsZEJyb2tlbkVmZmVjdElkUhRzaGllbGRCcm9rZW5FZmZlY3RJZBIvCgphdHRhY2tUeXBlGDQgASgNQg/iPwwSCmF0dGFja
  1R5cGVSCmF0dGFja1R5cGUSQQoQZ2FjaGFHZXRUaW1lbGluZRg1IAEoCUIV4j8SEhBnYWNoYUdldFRpbWVsaW5lUhBnYWNoYUdld
  FRpbWVsaW5lEkcKEmJlU3VwcHJlc3NlZENvbmZpZxg2IAMoBUIX4j8UEhJiZVN1cHByZXNzZWRDb25maWdSEmJlU3VwcHJlc3NlZ
  ENvbmZpZxIgCgVzaGFwZRg3IAEoDUIK4j8HEgVzaGFwZVIFc2hhcGUSLwoKc2hhcGVQYXJhbRg4IAEoCUIP4j8MEgpzaGFwZVBhc
  mFtUgpzaGFwZVBhcmFtEiwKCXNoYXBlSWNvbhg5IAEoCUIO4j8LEglzaGFwZUljb25SCXNoYXBlSWNvbhI1CgxzaGFwZVRlcnJha
  W4YOiABKA1CEeI/DhIMc2hhcGVUZXJyYWluUgxzaGFwZVRlcnJhaW4SKQoIaWRsZVR5cGUYOyABKA1CDeI/ChIIaWRsZVR5cGVSC
  GlkbGVUeXBlEjUKDGRpc3BsYWNlbWVudBg8IAEoDUIR4j8OEgxkaXNwbGFjZW1lbnRSDGRpc3BsYWNlbWVudBIjCgZpc0hpZGUYP
  SABKAhCC+I/CBIGaXNIaWRlUgZpc0hpZGUSJgoHd2Vha1RhZxg+IAEoCUIM4j8JEgd3ZWFrVGFnUgd3ZWFrVGFnEjgKDXN1cHByZ
  XNzR3JvdXAYPyABKAlCEuI/DxINc3VwcHJlc3NHcm91cFINc3VwcHJlc3NHcm91cBIvCgp1bmxvY2tIaW50GEAgASgNQg/iPwwSC
  nVubG9ja0hpbnRSCnVubG9ja0hpbnQSLwoKdW5sb2NrRG9ybRhBIAMoDUIP4j8MEgp1bmxvY2tEb3JtUgp1bmxvY2tEb3JtEjIKC
  2d1YXJkUmFkaXVzGEIgASgFQhDiPw0SC2d1YXJkUmFkaXVzUgtndWFyZFJhZGl1cxI+Cg9ndWFyZFJhZGl1c1Nob3cYQyABKAVCF
  OI/ERIPZ3VhcmRSYWRpdXNTaG93Ug9ndWFyZFJhZGl1c1Nob3cSOAoNZ2FjaGFHZXRBdWRpbxhEIAEoDUIS4j8PEg1nYWNoYUdld
  EF1ZGlvUg1nYWNoYUdldEF1ZGlvEjgKDWdhY2hhR2V0Vm9pY2UYRSABKA1CEuI/DxINZ2FjaGFHZXRWb2ljZVINZ2FjaGFHZXRWb
  2ljZRI4Cg13ZWFrV2VhcG9uVGFnGEYgASgFQhLiPw8SDXdlYWtXZWFwb25UYWdSDXdlYWtXZWFwb25UYWcaUQoNU29sZEdldDFFb
  nRyeRIaCgNrZXkYASABKA1CCOI/BRIDa2V5UgNrZXkSIAoFdmFsdWUYAiABKA1CCuI/BxIFdmFsdWVSBXZhbHVlOgI4AWIGcHJvd
  G8z"""
    ).mkString)
  lazy val scalaDescriptor: _root_.scalapb.descriptors.FileDescriptor = {
    val scalaProto = com.google.protobuf.descriptor.FileDescriptorProto.parseFrom(ProtoBytes)
    _root_.scalapb.descriptors.FileDescriptor.buildFrom(scalaProto, dependencies.map(_.scalaDescriptor))
  }
  lazy val javaDescriptor: com.google.protobuf.Descriptors.FileDescriptor = {
    val javaProto = com.google.protobuf.DescriptorProtos.FileDescriptorProto.parseFrom(ProtoBytes)
    com.google.protobuf.Descriptors.FileDescriptor.buildFrom(javaProto, _root_.scala.Array(
      gfbot.decoder.language_string_data.LanguageStringDataProto.javaDescriptor
    ))
  }

  @deprecated("Use javaDescriptor instead. In a future version this will refer to scalaDescriptor.", "ScalaPB 0.5.47")
  def descriptor: com.google.protobuf.Descriptors.FileDescriptor = javaDescriptor
}
